# cipher_mahdy_sali

./: README.md
cipher_sfm2136/: CHANGELOG.md  CONTRIBUTING.md  README.md  cipher.py  pyproject.toml
cipher_sfm2136/docs/: Makefile  conf.py  example.ipynb  make.bat
cipher_sfm2136/src/cipher_sfm2136/: __init__.py  cipher_sfm2136.py
cipher_sfm2136/tests/: test_cipher_sfm2136.py
