[tool.poetry]
name = "cipher_sfm2136"
version = "0.1.0"
description = "Python package that enciphers text."
authors = ["Sali Mahdy"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
